add bootstrap call for better usability

--- a/style/_mobile.scss
+++ b/style/_mobile.scss
@@ -62,69 +62,69 @@
     gap: 20px;
   }
 
-  .rectangle17Img {
-    width: 185px;
-    height: 161px;
-    margin-left: 0%;
-    margin-right: 60%;
-  }
-  .rectangle17 {
-    height: 642px;
-    width: 100%;
-    display: inline-block;
-    // align-items: center;
-  }
-  .rectangle17Input {
-    padding-top: 0%;
-    width: 310px;
-    padding-top: 0%;
-    margin-left: 50%;
-    display: inline-block;
+  // .rectangle17Img {
+  //   width: 185px;
+  //   height: 161px;
+  //   margin-left: 0%;
+  //   margin-right: 60%;
+  // }
+  // .rectangle17 {
+  //   height: 642px;
+  //   width: 100%;
+  //   display: inline-block;
+  //   // align-items: center;
+  // }
+  // .rectangle17Input {
+  //   padding-top: 0%;
+  //   width: 310px;
+  //   padding-top: 0%;
+  //   margin-left: 50%;
+  //   display: inline-block;
 
-    // margin-left: 20%;
-    // margin-right: 5%;
-  }
-  .rectangle17InputH2 {
-    font: normal normal 900 25px Heebo;
-  }
-  .rectangle17InputP1 {
-    font: normal normal normal 15px Heebo;
-    padding-bottom: 72px;
-  }
+  //   // margin-left: 20%;
+  //   // margin-right: 5%;
+  // }
+  // .rectangle17InputH2 {
+  //   font: normal normal 900 25px Heebo;
+  // }
+  // .rectangle17InputP1 {
+  //   font: normal normal normal 15px Heebo;
+  //   padding-bottom: 72px;
+  // }
 
-  .formInputSubmit {
-    float: right;
-    width: 166px;
-    /* height: 50px; */
-    /* UI Properties */
-    background: #1ae0ec 0% 0% no-repeat padding-box;
-    font-size: 12px;
-  }
+  // .formInputSubmit {
+  //   float: right;
+  //   width: 166px;
+  //   /* height: 50px; */
+  //   /* UI Properties */
+  //   background: #1ae0ec 0% 0% no-repeat padding-box;
+  //   font-size: 12px;
+  // }
 
-  .rectangle17InputH2 {
-    font: normal normal 900 2rem Heebo;
-  }
+  // .rectangle17InputH2 {
+  //   font: normal normal 900 2rem Heebo;
+  // }
 
-  .rectangle17InputP1 {
-    font: normal normal normal 1.3rem Heebo;
+  // .rectangle17InputP1 {
+  //   font: normal normal normal 1.3rem Heebo;
 
-    padding-bottom: 31px;
-  }
+  //   padding-bottom: 31px;
+  // }
 
-  .rectangle17InputP2 {
-    font: normal normal bold 12px Heebo;
-  }
-  .formInput {
-    direction: rtl;
-    width: 300px;
-    height: 28px;
-    margin-left: 10px;
-  }
-  .formInput1 {
-    width: 300px;
-    height: 57px;
-    margin-left: 10px;
-  }
+  // .rectangle17InputP2 {
+  //   font: normal normal bold 12px Heebo;
+  // }
+  // .formInput {
+  //   direction: rtl;
+  //   width: 300px;
+  //   height: 28px;
+  //   margin-left: 10px;
+  // }
+  // .formInput1 {
+  //   width: 300px;
+  //   height: 57px;
+  //   margin-left: 10px;
+  // }
 }
 
 @media only screen and (max-width: 820px) {
@@ -132,76 +132,76 @@
     margin-left: 1%;
   }
 
-  .rectangle17Input {
-    margin-left: 10%;
-  }
+  // .rectangle17Input {
+  //   margin-left: 10%;
+  // }
 
   .rectangle55Grid {
     grid-template-columns: repeat(1, 1fr);
   }
-  .rectangle17Img {
-    width: 185px;
-    height: 161px;
-    margin-left: 0%;
-    margin-right: 60%;
-  }
-  .rectangle17 {
-    height: 642px;
-    width: 100%;
-    display: inline-block;
-    // align-items: center;
-  }
-  .rectangle17Input {
-    padding-top: 0%;
-    width: 310px;
-    padding-top: 0%;
-    margin-left: 10%;
-    display: inline-block;
+  // .rectangle17Img {
+  //   width: 185px;
+  //   height: 161px;
+  //   margin-left: 0%;
+  //   margin-right: 60%;
+  // }
+  // .rectangle17 {
+  //   height: 642px;
+  //   width: 100%;
+  //   display: inline-block;
+  //   // align-items: center;
+  // }
+  // .rectangle17Input {
+  //   padding-top: 0%;
+  //   width: 310px;
+  //   padding-top: 0%;
+  //   margin-left: 10%;
+  //   display: inline-block;
 
-    // margin-left: 20%;
-    // margin-right: 5%;
-  }
-  .rectangle17InputH2 {
-    font-size: 25px;
-  }
-  .rectangle17InputP1 {
-    font-size: 15px;
-    padding-bottom: 72px;
-  }
+  //   // margin-left: 20%;
+  //   // margin-right: 5%;
+  // }
+  // .rectangle17InputH2 {
+  //   font-size: 25px;
+  // }
+  // .rectangle17InputP1 {
+  //   font-size: 15px;
+  //   padding-bottom: 72px;
+  // }
 
-  .formInputSubmit {
-    float: right;
-    width: 166px;
-    /* height: 50px; */
-    /* UI Properties */
-    background: #1ae0ec 0% 0% no-repeat padding-box;
-    font-size: 12px;
-  }
+  // .formInputSubmit {
+  //   float: right;
+  //   width: 166px;
+  //   /* height: 50px; */
+  //   /* UI Properties */
+  //   background: #1ae0ec 0% 0% no-repeat padding-box;
+  //   font-size: 12px;
+  // }
 
-  .rectangle17InputH2 {
-    font: normal normal 900 2rem Heebo;
-  }
+  // .rectangle17InputH2 {
+  //   font: normal normal 900 2rem Heebo;
+  // }
 
-  .rectangle17InputP1 {
-    font: normal normal normal 1.3rem Heebo;
+  // .rectangle17InputP1 {
+  //   font: normal normal normal 1.3rem Heebo;
 
-    padding-bottom: 31px;
-  }
+  //   padding-bottom: 31px;
+  // }
 
-  .rectangle17InputP2 {
-    font-size: 12px;
-  }
-  .formInput {
-    direction: rtl;
-    width: 300px;
-    height: 28px;
-    margin-left: 10px;
-  }
-  .formInput1 {
-    width: 300px;
-    height: 57px;
-    margin-left: 10px;
-  }
+  // .rectangle17InputP2 {
+  //   font-size: 12px;
+  // }
+  // .formInput {
+  //   direction: rtl;
+  //   width: 300px;
+  //   height: 28px;
+  //   margin-left: 10px;
+  // }
+  // .formInput1 {
+  //   width: 300px;
+  //   height: 57px;
+  //   margin-left: 10px;
+  // }
 
   .socialMedia {
     width: 100%;
