--- a/style/main.css
+++ b/style/main.css
@@ -303,79 +303,37 @@ nav {
 
 /* rectangle17 */
 /* ---------------------------------------- */
-.rectangle17 {
-  width: 100%;
-  height: 959px;
+.inputFormContainer {
   background: #3a3a3a 0% 0% no-repeat padding-box;
-  display: flex;
-  /* justify-content: space-between; */
-  flex-direction: row;
 }
 
-/* .recyangle17Img{
-  width: 500px;;
-  display: inline-block;
-} */
-.rectangle17Img {
-  width: 40%;
-  height: 62%;
-  margin-left: 5%;
-}
-
-.rectangle17Input {
-  width: 549px;
-  height: 646px;
-  display: inline-block;
-  /* position: absolute; */
-  padding-top: 10%;
-  margin-left: 20%;
-  margin-right: 5%;
-}
-
-.formInput {
-  direction: rtl;
-  width: 541px;
-  height: 50px;
-}
-
-.formInput1 {
-  direction: rtl;
-  width: 541px;
-}
-
-.formInputSubmit {
-  float: right;
-  width: 166px;
-  /* height: 50px; */
-  /* UI Properties */
-  background: #1ae0ec 0% 0% no-repeat padding-box;
-  border-radius: 25px;
-  font-family: "Heebo";
-  font-size: 1.3rem;
-  font-style: normal;
-  font-variant: normal;
-  font-weight: bold;
-  /* line-height: 30px; */
-}
-
-.rectangle17InputH2 {
+/* tobr remove start */
+.h2Font {
+  font: normal normal 900 36px/53px Heebo;
+  letter-spacing: 0px;
   color: #ffffff;
-  direction: rtl;
-  font: normal;
-  font: normal normal 900 2rem Heebo;
+  opacity: 1;
 }
 
-.rectangle17InputP1 {
-  direction: rtl;
-  font: normal normal normal 1.3rem Heebo;
+.pFont {
+  font: normal normal normal 20px/29px Heebo;
+  letter-spacing: 0px;
   color: #ffffff;
-  padding-bottom: 72px;
+  opacity: 1;
 }
 
-.labels {
-  direction: rtl;
-  font: normal normal bold 1rem Heebo;
+.labelFont {
+  font: normal normal bold 16px/24px Heebo;
+  letter-spacing: 0px;
   color: #ffffff;
+  opacity: 1;
+}
+
+.submitFont {
+  font: normal normal bold 22px/30px Heebo;
+  letter-spacing: 0.33px;
+  color: #2C2C2C;
+  opacity: 1;
 }
 
 /* rectangle6 */
@@ -463,124 +421,13 @@ nav {
     grid-template-columns: repeat(2, 1fr);
     gap: 20px;
   }
-  .rectangle17Img {
-    width: 185px;
-    height: 161px;
-    margin-left: 0%;
-    margin-right: 60%;
-  }
-  .rectangle17 {
-    height: 642px;
-    width: 100%;
-    display: inline-block;
-  }
-  .rectangle17Input {
-    padding-top: 0%;
-    width: 310px;
-    padding-top: 0%;
-    margin-left: 50%;
-    display: inline-block;
-  }
-  .rectangle17InputH2 {
-    font: normal normal 900 25px Heebo;
-  }
-  .rectangle17InputP1 {
-    font: normal normal normal 15px Heebo;
-    padding-bottom: 72px;
-  }
-  .formInputSubmit {
-    float: right;
-    width: 166px;
-    /* height: 50px; */
-    /* UI Properties */
-    background: #1ae0ec 0% 0% no-repeat padding-box;
-    font-size: 12px;
-  }
-  .rectangle17InputH2 {
-    font: normal normal 900 2rem Heebo;
-  }
-  .rectangle17InputP1 {
-    font: normal normal normal 1.3rem Heebo;
-    padding-bottom: 31px;
-  }
-  .rectangle17InputP2 {
-    font: normal normal bold 12px Heebo;
-  }
-  .formInput {
-    direction: rtl;
-    width: 300px;
-    height: 28px;
-    margin-left: 10px;
-  }
-  .formInput1 {
-    width: 300px;
-    height: 57px;
-    margin-left: 10px;
-  }
 }
 @media only screen and (max-width: 820px) {
   #profileImage {
     margin-left: 1%;
   }
-  .rectangle17Input {
-    margin-left: 10%;
-  }
   .rectangle55Grid {
     grid-template-columns: repeat(1, 1fr);
-  }
-  .rectangle17Img {
-    width: 185px;
-    height: 161px;
-    margin-left: 0%;
-    margin-right: 60%;
-  }
-  .rectangle17 {
-    height: 642px;
-    width: 100%;
-    display: inline-block;
-  }
-  .rectangle17Input {
-    padding-top: 0%;
-    width: 310px;
-    padding-top: 0%;
-    margin-left: 10%;
-    display: inline-block;
-  }
-  .rectangle17InputH2 {
-    font-size: 25px;
-  }
-  .rectangle17InputP1 {
-    font-size: 15px;
-    padding-bottom: 72px;
-  }
-  .formInputSubmit {
-    float: right;
-    width: 166px;
-    /* height: 50px; */
-    /* UI Properties */
-    background: #1ae0ec 0% 0% no-repeat padding-box;
-    font-size: 12px;
-  }
-  .rectangle17InputH2 {
-    font: normal normal 900 2rem Heebo;
-  }
-  .rectangle17InputP1 {
-    font: normal normal normal 1.3rem Heebo;
-    padding-bottom: 31px;
-  }
-  .rectangle17InputP2 {
-    font-size: 12px;
-  }
-  .formInput {
-    direction: rtl;
-    width: 300px;
-    height: 28px;
-    margin-left: 10px;
-  }
-  .formInput1 {
-    width: 300px;
-    height: 57px;
-    margin-left: 10px;
   }
   .socialMedia {
     width: 100%;
