--- a/style/main.css
+++ b/style/main.css
@@ -8,9 +8,6 @@ html {
   scroll-behavior: smooth;
 }
 
-/* Viewport 1920*1080 */
-/* Design size 1920*4151 */
-/* 12pt = 16px = 1em */
 /* Header section */
 /* ---------------------------------------- */
 header {
@@ -37,7 +34,8 @@ header {
   height: 35px;
 }
 
-.hamburger, #checkHamburger {
+.hamburger,
+#checkHamburger {
   display: none;
 }
 
@@ -69,8 +67,6 @@ nav {
 /* ---------------------------------------- */
 .path1 {
   padding-top: 100px;
-  /* width: 100%; */
-  /* height: 461px; */
   background: rgba(19, 232, 241, 0.3882352941) 0% 0% no-repeat padding-box;
   opacity: 1;
   display: flex;
@@ -79,34 +75,25 @@ nav {
 }
 
 #path1H2 {
-  /* width: 404px; */
-  /* height: 118px; */
   text-align: center;
-  /* font: normal normal 900 80px/118px Heebo; */
   font-family: "Heebo";
   font-size: 5rem;
   font-style: normal;
   font-variant: normal;
   font-weight: 900;
-  /* line-height: 7.3rem; */
   letter-spacing: 0px;
   color: #3a3a3a;
   opacity: 1;
 }
 
 #path1P {
-  /* top: 342px;
-  left: 538px; */
   width: 44%;
-  /* height: 60px; */
   text-align: center;
-  /* font: normal normal 500 20px/30px Heebo; */
   font-family: "Heebo";
   font-size: 1.25rem;
   font-style: normal;
   font-variant: normal;
   font-weight: 500;
-  /* font: normal normal 900 20px/30px Heebo; */
   letter-spacing: 0px;
   color: #3a3a3a;
   opacity: 1;
@@ -117,9 +104,6 @@ nav {
 .rectangle22 {
   top: 541px;
   left: 0px;
-  /* width: 100%; */
-  /* height: 130px; */
-  /* UI Properties */
   background: #ffffff 0% 0% no-repeat padding-box;
   box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.1607843137);
   opacity: 1;
@@ -193,9 +177,6 @@ nav {
 /* rectangle55 */
 /* ---------------------------------------- */
 .rectangle55 {
-  /* padding-top: 100px; */
-  /* width: 100%; */
-  /* height: 1558px; */
   padding-top: 150px;
   background: #f6f6f6 0% 0% no-repeat padding-box;
   display: flex;
@@ -248,7 +229,6 @@ nav {
 }
 
 .projectTitle {
-  /* width: 21%; */
   font-family: "Heebo";
   font-size: 1.25em;
   text-align: center;
@@ -263,8 +243,6 @@ nav {
 
 .projectImageTech {
   width: 122px;
-  /* height: 26px; */
-  /* UI Properties */
   background: #ffffff 0% 0% no-repeat padding-box;
   box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.1607843137);
   display: flex;
@@ -279,7 +257,6 @@ nav {
 
 .projectLinkButton {
   width: 150px;
-  /* height: 21px; */
   -webkit-appearance: button;
   -moz-appearance: button;
   appearance: button;
@@ -291,7 +268,6 @@ nav {
   letter-spacing: 0.1em;
   cursor: pointer;
   color: #3a3a3a;
-  /* font: normal normal bold 20px Heebo; */
   font-family: "Heebo";
   font-size: 1rem;
   font-weight: bold;
@@ -307,7 +283,6 @@ nav {
   background: #3a3a3a 0% 0% no-repeat padding-box;
 }
 
-/* tobr remove start */
 .h2Font {
   font: normal normal 900 36px/53px Heebo;
   letter-spacing: 0px;
@@ -332,7 +307,7 @@ nav {
 .submitFont {
   font: normal normal bold 22px/30px Heebo;
   letter-spacing: 0.33px;
-  color: #2C2C2C;
+  color: #2c2c2c;
   opacity: 1;
 }
 
