--- a/projects/projectName2/style/project2LandingPage..css
+++ b/projects/projectName2/style/project2LandingPage..css
@@ -48,6 +48,25 @@ color: #3A3A3A;
   letter-spacing: 0px;
   color: #2C2C2C;
 }
+
+.projectLinkButton {
+  width: 150px;
+  -webkit-appearance: button;
+  -moz-appearance: button;
+  appearance: button;
+  background-color: #1ae0ec;
+  border: none;
+  border-radius: 1.3%;
+  text-align: center;
+  text-decoration: none;
+  letter-spacing: 0.1em;
+  cursor: pointer;
+  color: #3a3a3a;
+  font-family: "Heebo";
+  font-size: 1rem;
+  font-weight: bold;
+}
+
 /* שורת אייקונים */
 
 .iconBar {
