--- a/projects/projectName2/style/project2LandingPage..css
+++ b/projects/projectName2/style/project2LandingPage..css
@@ -1,4 +1,3 @@
-
 * {
   padding: 0;
   margin: 0;
@@ -18,53 +17,49 @@
   width: 79px;
   height: 35px;
 }
-.navProj2{
+.navProj2 {
   font: normal normal normal 25px/37px Heebo;
-letter-spacing: 0px;
-color: #000000;
+  letter-spacing: 0px;
+  color: #000000;
 }
 
 /* שם פרויקט */
 
 .mainSection {
   padding-top: 100px;
-  height: 461px;
+  height: 42vh;
   background-color: #13e8f163;
 }
 .mainSectionH1 {
   padding-top: 100px;
-  font: normal normal 900 80px/118px Heebo;
-letter-spacing: 0px;
-color: #3A3A3A;
+  font: normal normal 900 5em Heebo;
+  letter-spacing: 0px;
+  color: #3a3a3a;
 }
 
-.mainSectionP{
-  font: normal normal medium 20px/30px Heebo;
-letter-spacing: 0px;
-color: #3A3A3A;
+.mainSectionP {
+  font: normal normal medium 1.25em  Heebo;
+  /* letter-spacing: 0px; */
+  color: #3a3a3a;
+   /* height: 30%;  */
 }
-.mainSectionBtn{
+/* .mainSectionBtn{
   font: normal normal medium 14px/26px Heebo;
   letter-spacing: 0px;
   color: #2C2C2C;
-}
+} */
 
+.colProj2 {
+  /* background-color: black; */
+}
 .projectLinkButton {
-  width: 150px;
-  -webkit-appearance: button;
-  -moz-appearance: button;
-  appearance: button;
-  background-color: #1ae0ec;
-  border: none;
-  border-radius: 1.3%;
-  text-align: center;
-  text-decoration: none;
-  letter-spacing: 0.1em;
-  cursor: pointer;
-  color: #3a3a3a;
-  font-family: "Heebo";
-  font-size: 1rem;
-  font-weight: bold;
+  width: 8vw;
+
+  background: #1ae0ec 0% 0% no-repeat padding-box;
+  border-radius: 1vw;
+  font: normal normal medium 1em Heebo;
+  letter-spacing: 0px;
+  color: #2c2c2c;
 }
 
 /* שורת אייקונים */
@@ -89,7 +84,7 @@ color: #3A3A3A;
 .imageDiv {
   height: 60vh;
   width: 100%;
-  /* width: 61vw; */
+
   display: flex;
   /* center hotizental */
   justify-content: center;
@@ -105,12 +100,10 @@ color: #3A3A3A;
   opacity: 1;
 }
 
-@media only screen and (max-width: 820px){
+@media only screen and (max-width: 820px) {
   .imageOfWebSite {
     /* height: 66vh; */
-  
+
     width: 80vw;
-   
   }
-  
 }
