--- a/projects/projectName2/style/project2LandingPage..css
+++ b/projects/projectName2/style/project2LandingPage..css
@@ -8,7 +8,7 @@
 /* תפריט  */
 #profileImage {
   width: 62px;
-  
+
   border-radius: 31px;
 }
 
@@ -25,24 +25,25 @@
 /* שם פרויקט */
 
 .mainSection {
-  padding-top: 100px;
-  height: 42vh;
+  padding-top: 10vh;
+  /* height: 42vh; */
+  width: 100%;
+
   background-color: #13e8f163;
 }
 .mainSectionH1 {
-  padding-top: 100px;
+  padding-top: 7vh;
   font: normal normal 900 5em Heebo;
-  letter-spacing: 0px;
   color: #3a3a3a;
 }
 
 .mainSectionP {
-  font: normal normal medium 1.25em  Heebo;
+  font: normal normal medium 1.25em Heebo;
   /* letter-spacing: 0px; */
   color: #3a3a3a;
-   /* height: 30%;  */
+  width: 90%;
+  /* height: 30%;  */
 }
-
 
 .colProj2 {
   /* background-color: black; */
@@ -71,14 +72,14 @@
 
 .imageOfWebSite {
   /* height: 66vh; */
-
-  width: 50vw;
+/* margin-top: 9vh; */
+  width: 50%;
   background: #ebfeff 0% 0% no-repeat padding-box;
 }
 
 .imageDiv {
   height: 60vh;
-  width: 100%;
+  
 
   display: flex;
   /* center hotizental */
@@ -97,7 +98,7 @@
 
 @media only screen and (max-width: 820px) {
   .imageOfWebSite {
-    /* height: 66vh; */
+    
 
     width: 80vw;
   }
