--- a/projects/projectName3/style/project3LandingPage.css
+++ b/projects/projectName3/style/project3LandingPage.css
@@ -30,6 +30,11 @@
   width: 100%;
 
   background-color: #13e8f163;
+  display: flex;
+  
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 .mainSectionH1 {
   padding-top: 7vh;
@@ -41,21 +46,26 @@
   font: normal normal medium 1.25em Heebo;
   /* letter-spacing: 0px; */
   color: #3a3a3a;
-  width: 90%;
+  width: 60%;
   /* height: 30%;  */
 }
-
+.buttonContainer {
+  padding-bottom: 11vh;
+}
 .colProj2 {
-  /* background-color: black; */
+  /* background-color: lightcoral; */
 }
 .projectLinkButton {
-  width: 8vw;
-
+  width: 150px;
+  padding: 4px 10px;
   background: #1ae0ec 0% 0% no-repeat padding-box;
-  border-radius: 1vw;
-  font: normal normal medium 1em Heebo;
-  letter-spacing: 0px;
+  border-radius: 15px;
+  font: normal normal medium 14px Heebo;
   color: #2c2c2c;
+  text-decoration: none;
+}
+.projectLinkButton:hover{
+  background: lightskyblue;
 }
 
 /* שורת אייקונים */
@@ -72,14 +82,13 @@
 
 .imageOfWebSite {
   /* height: 66vh; */
-/* margin-top: 9vh; */
+  /* margin-top: 9vh; */
   width: 50%;
   background: #ebfeff 0% 0% no-repeat padding-box;
 }
 
 .imageDiv {
   height: 60vh;
-  
 
   display: flex;
   /* center hotizental */
@@ -98,8 +107,6 @@
 
 @media only screen and (max-width: 820px) {
   .imageOfWebSite {
-    
-
     width: 80vw;
   }
 }
