--- a/projects/projectName5/style/project5.css
+++ b/projects/projectName5/style/project5.css
@@ -39,7 +39,7 @@ p {
   text-align: center;
   width: 90%;
 }
-.main{
+.main {
   /* width: 1920px;
   height: 2288px; */
 }
@@ -49,12 +49,12 @@ p {
   display: grid;
 
   /* grid-template-columns: 337px 296px 296px 296px 296px 296px 337px; */
-  grid-template-columns: 17vw 1fr 1fr 1fr 1fr  17vw;
+  grid-template-columns: 17vw 1fr 1fr 1fr 1fr 17vw;
   grid-template-rows: repeat(8, 1fr);
   justify-items: center;
   gap: 1vh;
 }
-.emptyRowOne{
+.emptyRowOne {
   grid-column: 1 / 2;
   grid-row: 1 / 8;
   border: 5px solid black;
@@ -108,13 +108,13 @@ p {
 .formCard {
   grid-column: 2 / 4;
   grid-row: 5 / 8;
-  width: 30vw;
-  
+  /* width: 30vw; */
+
   background: #8e097c 0% 0% no-repeat padding-box;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding-right: 57px;
+  padding-right: 15%;
 }
 
 #image506-6 {
@@ -147,7 +147,7 @@ p {
   color: #0ee1da;
 }
 .form-control-input {
-  width: 500px;
+  width: 80%;
   /* height: 60px; */
   /* UI Properties */
   background: #e5eeff 0% 0% no-repeat padding-box;
@@ -155,8 +155,8 @@ p {
 }
 
 .submitFont {
-  width: 501px;
-  height: 60px;
+  width: 80%;
+  /* height: 60px; */
   /* UI Properties */
   background: #0ee1da 0% 0% no-repeat padding-box;
   font: normal normal bold 24px/33px Heebo;
@@ -166,4 +166,108 @@ p {
 
 /* @media (max-width: 1200px) { */
 @media (max-width: 768px) {
+  h1 {
+    font: normal normal bold 36px Assistant;
+    letter-spacing: 0px;
+    color: #0ee1da;
+  }
+  p {
+    font: normal normal normal 15px/19px Assistant;
+    letter-spacing: 0px;
+    color: #f9f9f9;
+  }
+  h2 {
+    font: normal normal bold 25px/33px Assistant;
+  }
+
+  .form-control-input {
+    margin-bottom: 3px;
+    font: normal normal bold 7px/10px Heebo;
+    height: 10px;
+    width: 80%;
+  }
+  .form-control-label {
+    font: normal normal bold 7px/10px Heebo;
+    width: 80%;
+  }
+  .submitFont {
+    /* width: 278px; */
+    width: 80%;
+    height: 33px;
+    font: normal normal bold 12px/16px Heebo;
+  }
+  .mainGrid {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(12, 1fr);
+  }
+
+  .mainBox {
+    grid-column: 1 / 3;
+    grid-row: 1 / 3;
+    /* height: 340px; */
+    /* width: 100%; */
+  }
+  #image515 {
+    grid-column: 1 / 2;
+    grid-row: 3 / 4;
+  }
+  #image514 {
+    grid-column: 2 / 3;
+    grid-row: 3 / 4;
+  }
+
+  #image516 {
+    grid-column: 1 / 2;
+    grid-row: 4 / 5;
+  }
+  #image506-2 {
+    grid-column: 2 / 3;
+    grid-row: 4 / 5;
+  }
+  #image506-5 {
+    grid-column: 1 / 2;
+    grid-row: 5 / 6;
+  }
+  #image506-4 {
+    grid-column: 2 / 3;
+    grid-row: 5 / 6;
+  }
+  #image506-3 {
+    grid-column: 1 / 2;
+    grid-row: 6 / 7;
+  }
+  #image506-1 {
+    grid-column: 2 / 3;
+    grid-row: 6 / 7;
+  }
+  .formCard {
+    grid-column: 1 / 3;
+    grid-row: 7 / 10;
+    height: 518px;
+  }
+
+  #image506-6 {
+    grid-column: 1 / 2;
+    grid-row: 10 / 11;
+  }
+  #image506-7 {
+    grid-column: 2 / 3;
+    grid-row: 10 / 11;
+  }
+  #image506-9 {
+    grid-column: 1 / 2;
+    grid-row: 11 / 12;
+  }
+  #image506-8 {
+    grid-column: 2 / 3;
+    grid-row: 11 / 12;
+  }
+  #image513 {
+    grid-column: 1 / 2;
+    grid-row: 12 / 13;
+  }
+  #image506-10 {
+    grid-column: 2 / 3;
+    grid-row: 12 / 13;
+  }
 }
