--- a/projects/projectName7/style/project7.css
+++ b/projects/projectName7/style/project7.css
@@ -19,6 +19,7 @@ body {
 
   background: #0ee1e1 0% 0% no-repeat padding-box;
   display: flex;
+  justify-content: center;
   border: 5px solid black;
 }
 
@@ -57,6 +58,7 @@ body {
 }
 
 .headerText > p {
+  /* width: 787px; */
   font: normal normal normal 20px/29px Heebo;
   letter-spacing: 0px;
   color: #000000;
@@ -82,7 +84,30 @@ body {
   height: 329px;
   background: #f8f8f8 0% 0% no-repeat padding-box;
   border: 5px solid black;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  
+
 }
+.card > h1{
+  margin-top: 30px;
+  font: normal normal 900 30px/44px Heebo;
+  letter-spacing: 0px;
+  color: #0EE1E1;
+}
+.card > p{
+  font: normal normal normal 15px/22px Heebo;
+letter-spacing: 0px;
+color: #000000;
+width: 293px;
+}
+
+.cardIcon{
+  width: 33px;
+}
+
 
 .MainContactMap {
   /* width: 100%; */
