--- a/projects/projectName7/style/project7.css
+++ b/projects/projectName7/style/project7.css
@@ -10,18 +10,21 @@ html {
 
 .mainHeader {
   width: 100%;
-  height: 634px;
+  /* height: 59vh; */
 
   background: #0ee1e1 0% 0% no-repeat padding-box;
   display: flex;
   justify-content: center;
-  border: 5px solid black;
+  /* border: 5px solid black; */
+}
+.iconBoxMobile {
+  display: none;
 }
 
 .iconWhatsapp {
-  width: 95px;
-  height: 95px;
-  margin: 65px 0 0 65px;
+  width: 5vw;
+  height: 9vh;
+  margin: 6vh 0 0 3vw;
   background: #ffffff 0% 0% no-repeat padding-box;
   box-shadow: 0px 3px 6px #00000029;
   display: flex;
@@ -30,148 +33,136 @@ html {
   border-radius: 48px;
 }
 .iconWhatsapp > img {
-  width: 54px;
-  /* height: 54px; */
+  width: 3vw;
 }
 
 .headerText {
-  width: 787px;
-  height: 634px;
-  margin-left: 476px;
+  width: 40vw;
+  /* height: 59vh; */
+  margin-left: 25vw;
 
   display: flex;
   flex-direction: column;
 
   /* justify-content: flex-end; */
 
-  border: 5px solid black;
+  /* border: 5px solid black; */
 }
 
 .headerText > h1 {
-  margin-top: 232px;
-  font: normal normal 900 66px/97px Heebo;
+  margin-top: 21vh;
+  font: normal normal 900 4em Heebo;
   color: #000000;
 }
 
 .headerText > p {
-  /* width: 787px; */
-  font: normal normal normal 20px/29px Heebo;
-  letter-spacing: 0px;
+  font: normal normal normal 1.25em Heebo;
+
   color: #000000;
 }
 
 .iconBox {
-  /* margin-left: 182px; */
-  margin: 182px 0 0 182px;
+  margin: 17vh 0 0 9vh;
 }
 
 .mainCard {
   width: 100%;
-  height: 329px;
-  margin-top: 46px;
+
+  margin-top: 4vh;
 
   display: flex;
   flex-flow: nowrap;
-  justify-content: space-evenly;
+  /* justify-content: space-evenly; */
+  /* border: 5px solid black; */
 }
 
 .card {
-  width: 450px;
-  height: 329px;
+  width: 24vw;
+  height: 40vh;
   background: #f8f8f8 0% 0% no-repeat padding-box;
-  border: 5px solid black;
+  /* border: 5px solid black; */
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 .card > h1 {
-  margin-top: 30px;
-  font: normal normal 900 30px/44px Heebo;
-  letter-spacing: 0px;
+  margin-top: 3vh;
+  font: normal normal 900 2.5em Heebo;
+
   color: #0ee1e1;
 }
 .card > p {
-  font: normal normal normal 15px/22px Heebo;
-  letter-spacing: 0px;
+  font: normal normal normal 0.9em Heebo;
+  text-align: center;
   color: #000000;
-  width: 293px;
+  width: 10vw;
 }
 
 .card > img {
-  width: 33px;
+  width: 2vw;
 }
 
 .mainContactMap {
   /* width: 100%; */
-  /* height: 939px ; */
+
   margin-top: 70px;
   display: flex;
   flex-direction: row;
-
-  /* border: 5px solid black; */
 }
 
 .mainContact {
   width: 40%;
-  height: 939px;
-  /* margin-left: 185px; */
-  /* height: 10px ; */
-  /* background-color: beige; */
-  border: 5px solid black;
+  height: 87vh;
+
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 .mainContactForm {
-  /* width: 40%;
-  height: 939px; */
-  height: 614px;
-  width: 427px;
-  /* margin-left: 30%; */
-  /* height: 10px ; */
-  /* background-color: beige; */
-  border: 5px solid black;
+  height: 57vh;
+  width: 22vw;
+
   display: flex;
   flex-direction: column;
 }
 
 .mainContactForm > h1 {
-  font: normal normal 900 46px/67px Heebo;
+  font: normal normal 900 2.8vh Heebo;
   letter-spacing: 0px;
   color: #090909;
 }
 
 .mainContactForm > p {
-  font: normal normal normal 15px/22px Heebo;
+  font: normal normal normal 0.9em Heebo;
   letter-spacing: 0px;
   color: #000000;
   width: 100%;
 }
 
 .mainContactForm > label {
-  font: normal normal bold 13px/19px Heebo;
-  letter-spacing: 0px;
+  font: normal normal bold 0.8em Heebo;
+
   color: #2c2c2c;
-  margin-top: 23px;
+  margin-top: 2vh;
 }
 
 .mainContactForm > input {
   background: #e5eeff 0% 0% no-repeat padding-box;
   /* width: 100%; */
-  height: 51px;
+  height: 5vh;
 }
 
 .mainContactForm > textarea {
   background: #e5eeff 0% 0% no-repeat padding-box;
-  height: 145px;
+  height: 13vh;
 }
 
 .mainContactForm > button {
   margin-top: 23px;
   /* width: 427px; */
-  height: 51px;
+  height: 5vh;
   background: #0ee1e1 0% 0% no-repeat padding-box;
   font: normal normal bold 20px/28px Heebo;
   letter-spacing: 0.3px;
@@ -180,7 +171,7 @@ html {
 
 .mainMap {
   width: 60%;
-  height: 939px;
+  height: 87vh;
 
   background: #0ee1e1 0% 0% no-repeat padding-box;
 
@@ -188,51 +179,102 @@ html {
   justify-content: center;
   align-items: center;
 }
-.mainMap > img 
-{
-  width: 943px;
-  height: 768px;
+.mainMap > img {
+  width: 50vw;
+  height: 71vh;
 
   background: transparent url("img/Rectangle 522.png") 0% 0% no-repeat
     padding-box;
-  border: 5px solid black;
 }
 
 .mainFooterIcons {
   width: 100%;
-  height: 95px;
-  margin-top: 50px;
-  margin-bottom: 50px;
+  height: 9vh;
+  margin-top: 5vh;
+  margin-bottom: 5vh;
   display: flex;
   justify-content: center;
-  /* background-color: lightcoral; */
-  /* border: 5px solid black; */
 }
 .icon {
-  width: 95px;
-  height: 95px;
-  margin-right: 37px;
+  width: 5vw;
+  height: 9vh;
+  margin-right: 2vw;
   background: #0ee1e1 0% 0% no-repeat padding-box;
   box-shadow: 0px 3px 6px #00000029;
-  border: 5px solid black;
+  /* border: 5px solid black; */
   display: flex;
   border-radius: 48px;
 }
 .icon > img {
-  width: 30px;
+  width: 1.5vw;
 
   margin: 0 auto;
-
-  /* height: 36px; */
 }
 
 .mainFooterLine {
   width: 100%;
-  height: 19px;
+  height: 2vh;
 
   background: #0ee1e1 0% 0% no-repeat padding-box;
 }
 
 /* @media (max-width: 1200px) { */
 @media (max-width: 768px) {
+  .mainHeader {
+    /* width: 100%;
+    
+    background: #0ee1e1 0% 0% no-repeat padding-box;
+    border: 5px solid black; */
+    width: 100%;
+    height: 391px;
+    display: flex;
+    flex-direction: column;
+    
+    /* border: 5px solid black; */
+  }
+
+  .iconWhatsapp {
+    display: none;
+  }
+  .iconBoxMobile {
+    display: block;
+    margin-top: 20%;
+    margin-left: 75%;
+  }
+
+  .iconBoxMobile > img {
+    width: 79px;
+    height: 65px;
+  }
+
+  .headerText {
+    margin: 0;
+    width: 80%;
+    margin-left: 10%;
+    margin-top: 10%;
+    /* border: 5px solid black; */
+  }
+
+  .headerText > h1 {
+    margin: 0;
+    /* width: 283px; */
+    /* height: 49px; */
+    text-align: right;
+    font: normal normal 900 2em Heebo;
+    letter-spacing: 0px;
+    color: #000000;
+  }
+
+  .headerText > p {
+    margin: 0;
+    /* width: 283px; */
+    /* height: 88px; */
+    text-align: right;
+    font: normal normal normal 1em Heebo;
+    letter-spacing: 0px;
+    color: #000000;
+  }
+  .iconBox {
+    display: none;
+  }
 }
